--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <header>
-    <button class="menu">&#9776;</button>
-    <h1>細菌檢測與消毒</h1>
-    <ul>
+        <h1>細菌檢測與消毒</h1>
+        
+        <button class="menu">&#8801;</button>
+        <ul>
         <li><a href="#">最新消息</a></li>
         <li><a href="#">關於我們</a></li>
         <li><a href="#">細菌種類</a></li>
-        <li><a href="#">及時觀看</a></li>                
+        <li><a href="#">及時觀看</a></li>               
     </ul>
+    <style>
+        a:link {color:#0033FF; text-decoration:underline;}
+        a:visited {color:#821DDA; text-decoration:underline;}
+        a:hover {color:#FF00FF; text-decoration:none;}
+        a:active {color:#15B9B6; text-decoration:underline;}
+        </style>
     </header>   
     <main>
 
