--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,7 +26,8 @@
     <main>
 
     <section class="news">
-    <h2>隨時監測細菌種類與範圍，如果是用手機請換成電腦版網站</h2>
+    <h2>隨時監測細菌種類與範圍</h2>
+        <h3>如果是用手機請換成電腦版網站</h3>
     <p>平平安安的祝福，健健康康的出院</p>
     <p><a href="#">瞭解更多</a></p>
     </section>
