--- a/HTML/index.html
+++ b/HTML/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <section class="slogan">
-    <blockquote>" 嚴格監控，讓您有舒服與安全的空間 "</blockquote>
+    <blockquote>" 嚴格監控，讓您有安全與舒適的空間 "</blockquote>
     </section>
     
     <section class="shop">
