--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,7 +27,7 @@
 
     <section class="news">
     <h2>隨時監測細菌種類與範圍</h2>
-    <p>如果是用手機請換成電腦版網站</p>
+    <p>如果是用手機請切換成電腦版網站</p>
     <p>平平安安的祝福，健健康康的出院</p>
     <p><a href="#">瞭解更多</a></p>
     </section>
